  * French translation update.
  * uscan:
    + Fix default compression suffix in git HEAD mode.  Closes: #912403; MR: !81

  [ Jérémy Lal ]
  * uscan:
    + Fix missing parenthesis.

  [ Mattia Rizzolo ]
  * doc:
    + Move the instructions to build/install/clean the doc/ directory into a
      Makefile in that directory.
    + Move devscripts.1 and devscripts.conf.5 from scripts/ to doc/.

 -- Mattia Rizzolo <mattia@debian.org>  Sun, 28 Oct 2018 16:30:43 +0100

devscripts (2.18.7) unstable; urgency=medium

  [ Martyn Welch ]
  * chdist:
    + Make src2bin use the chosen dist config instead of the host's.  MR: !52

  [ Xavier Guimard ]
  * Perl scripts:
    + Add common modules to parse configuration, command line and normalize
      output.  MR: !51
      - This moves libmoo-perl and libipc-run-perl dependency from "Recommends"
        to "Depends".  MR: !51; MR: !74
  * uscan:
    + Fix bad package name in git HEAD mode.  Closes: #896136
    + Modified to use common Perl modules.  MR: !51
    + Download only the good ref in gitmode shallow.  Closes: #910709; MR: !57
    + Fix documentation: -dd isn't usable, but --dd is.  MR: !58
    + Embed mk-origtargz instead of launching it and parse stdout.  MR: !55
    + Enclose the whole @ANY_VERSION@, @ARCHIVE_EXT@, @DEB_EXT@ and
      @SIGNATURE_EXT into non-capturing groups (See #910910).  MR: !66
    + Disable pgpmode=previous lines if nothing was downloaded.
      Closes: #910910; MR: !69
    + Use new value 'default' for compression when not chosen.  MR: !68
    + Fix regression from 2.18.5 where the User-Agent string was not set to
      the default value.  Closes: #911401; MR: !73
    + In git mode, check the local git repository in the if there is an
      upstream remote and use it when available.  Closes: #910777; MR: !72
  * mk-origtargz:
    + Rewritten using common Perl files.  MR: !55
    + Don't override compression when set in command line when we are
      implicitly repacking.  Closes: #894518; MR: !60