@@ -3,4 +3,3 @@ po4a/de/*.5
 po4a/fr/*.1
 po4a/fr/*.5
 scripts/*.1
-scripts/*.5
