@@ -7,17 +7,15 @@ use warnings;
 my $ITEM_LEADIN  = '.IP "\fI';
 my $ITEM_LEADOUT = '\fR(1)"';
 
-# Open control file
-open(CONTROL, "< ../debian/control") or die "unable to open control: $!";
-
 my $package;
 my $description;
 
-# Parse the control file
-while (<CONTROL>) {
+
+# Parse the shortened README file
+while (<>) {
     chomp;
     # A line starting with '  -' indicates a script
-    if (/^  - ([^:]*): (.*)/) {
+    if (/^ - ([^:]*): (.*)/) {
         if ($package and $description) {
             # If we get here, then we need to output the man code
             print $ITEM_LEADIN . $package . $ITEM_LEADOUT . "\n";
@@ -25,13 +23,8 @@ while (<CONTROL>) {
         }
         $package     = $1;
         $description = $2;
-    }
-    # Handle the last description
-    elsif (/^ \./ and $package and $description) {
-        print $ITEM_LEADIN . $package . $ITEM_LEADOUT . "\n";
-        print $description . "\n";
     } else {
-        s/^.{3}//;
+        s/^.{2}}//;
         $description .= $_;
     }
 }
